JBIDE-12092 : Fix Endorsed Libraries configurator doesn't support quotes in <compilerArgument>
git-svn-id: http://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.3.x@41684 a97e2381-89e5-4abb-bab3-167db6db766c